# a-star-cities-2

./: .gitmodules  AStarCities.h.in  CMakeLists.txt  README.md  todo.md
overpass_api/: downloadAllDataInArea.sh  downloadAllDataInCity.sh  downloadStreetDataInCity.sh  downloadStreetsInArea.sh  reqeustStreetsInCity  requestAllDataInArea  requestAllDataInCity  requestStreetsInArea
resources/: CMakeLists.txt
src/: MapParser.cpp  MapParser.h  Projector.cpp  Projector.h  main.cpp
src/AStar/: AStarOverlay.cpp  AStarOverlay.h  AStarWindow.cpp  AStarWindow.h  BorderDrawer.cpp  BorderDrawer.h  LoadingWindow.h  Solver.cpp  Solver.h
src/Map/: Building.cpp  Building.h  BuildingType.cpp  BuildingType.h  IdHandler.h  Intersection.cpp  Intersection.h  Map.cpp  Map.h  MapFeatureType.cpp  MapFeatureType.h  Node.cpp  Node.h  Road.cpp  Road.h  RoadType.cpp  RoadType.h  Way.cpp  Way.h
src/MapLoader/: LoadingWindow.cpp  LoadingWindow.h  MapLoader.cpp  MapLoader.h
src/MapParser/: BuildingParser.cpp  BuildingParser.h  MapParser.cpp  MapParser.h  MapParserConfig.h  NodeParser.cpp  NodeParser.h  ParserUtils.cpp  ParserUtils.h  RelationParser.cpp  RelationParser.h  RoadParser.cpp  RoadParser.h  WayParser.cpp  WayParser.h
src/MapRenderer/: Color.h  LineBuffer.cpp  LineBuffer.h  LineRenderer.cpp  LineRenderer.h  MapRenderer.cpp  MapRenderer.h  NodeRenderer.cpp  NodeRenderer.h  RenderBufferInterface.h  RenderConfig.h  ShapeBuffer.cpp  ShapeBuffer.h  ShapeRenderer.cpp  ShapeRenderer.h  Window.cpp  Window.h
src/MapUtilities/: Geometry.cpp  Geometry.h  NetworkFinder.cpp  NetworkFinder.h
tools/: countLines.js
